graphics(angle): glGetActiveUniformBlockName derives bufSize from caller buffer remaining() (ISS-540)
The buffer overload of glGetActiveUniformBlockName hardcoded the native bufSize
arg to 1024 regardless of the caller's uniformBlockName capacity — a smaller
caller buffer overflowed (native heap corruption). Now pass
uniformBlockName.remaining() (matching glGetDebugMessageLog). Fixed in lockstep on
both AngleGL30.scala (JVM/Panama) and AngleGL30Native.scala (Native); the String
overload (own 1024-byte buffer) is unchanged.

red:bc58c72f (DesktopIntegrationTest UBO sentinel-guard subprocess; 26-char block
name, 8-byte granted window — sentinel-overwrite proves the overflow) fix:a708d308
audit:PASS (proof-of-red + mutation bufSize=64->red + JVM/Native compile).